--- a/META.yml
+++ b/META.yml
@@ -15,9 +15,11 @@ name: Readonly-BeginLift
 provides:
   Readonly::BeginLift:
     file: lib/Readonly/BeginLift.pm
-    version: 0.01
+    version: 0.02
 requires:
   Devel::BeginLift: 0.001002
+  Readonly: 1.03
+  parent: 0.221
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.01
+version: 0.02
